--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "octosearch",
-  "title": "OctoSearch",
-  "description": "Single Page App to look up information about GitHub users",
+  "name": "Octosearch",
+  "title": "Jekyll site for jeremenichelli.github.io",
+  "url": "http://jeremenichelli.github.io/octosearch",
+  "author": "Jeremias Menichelli",
+  "copyright": "2015",
+  "version": "2.0.0",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeremenichelli/octosearch"
+    "url": "git+ssh://git@github.com/jeremenichelli/octosearch.git"
   },
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-less": "^1.3.6",
-    "gulp-minify-css": "^0.3.10",
-    "gulp-jshint": "^1.8.5",
-    "jshint-stylish": "^1.0.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-concat": "^2.4.1",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-rename": "^1.2.0"
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat-util": "^0.5.2",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6"
+  },
+  "bugs": {
+    "url": "https://github.com/jeremenichelli/octosearch/issues"
+  },
+  "homepage": "https://github.com/jeremenichelli/octosearch#readme",
+  "description": "App to search and visualize GitHub users profiles",
+  "main": "index.html",
+  "scripts": {
+    "build": "gulp && jekyll build"
   }
 }
